syntax = "proto3";

package kotlinx.rpc.grpc.test.common;

message Repeated {
  repeated fixed32 listFixed32 = 1 [packed = false];
  repeated fixed32 listFixed32Packed = 2 [packed = true];
  repeated int32 listInt32 = 3 [packed = false];
  repeated int32 listInt32Packed = 4 [packed = true];
  repeated string listString = 5;
  repeated Other listMessage = 6;

  message Other {
    int32 a = 1;
  }
}