syntax = "proto2";

package kotlinx.rpc.protobuf.test;

message PresenceCheck {
  required int32 RequiredPresence = 1;
  optional float OptionalPresence = 2;
}

